--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -12,17 +12,20 @@
         android:layout_height="20dp"
         android:background="@drawable/back2"
         android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true" />
+        android:layout_alignParentStart="true" />
     <com.baidu.mapapi.map.MapView
         android:id="@+id/bMapView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:clickable="true" />
+        android:clickable="true"
+        android:focusable="true" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_alignParentBottom="true"
-       android:background="@color/white"></LinearLayout>
+       android:background="@color/white">
+
+   </LinearLayout>
 
     <LinearLayout
         android:orientation="vertical"
