--- a/app/src/main/res/layout/fragment_personal.xml
+++ b/app/src/main/res/layout/fragment_personal.xml
@@ -100,6 +100,7 @@
                             android:textStyle="bold" />
 
                         <TextView
+                            android:background="?android:selectableItemBackgroundBorderless"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentEnd="true"
@@ -142,6 +143,7 @@
                             android:textStyle="bold" />
 
                         <LinearLayout
+                            android:background="?android:selectableItemBackgroundBorderless"
                             android:id="@+id/wallet_btn"
                             android:layout_alignParentEnd="true"
                             android:layout_width="wrap_content"
