--- a/app/src/main/res/layout/tibutton_item.xml
+++ b/app/src/main/res/layout/tibutton_item.xml
@@ -3,8 +3,10 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:id="@+id/container">
+    android:id="@+id/container"
+    android:background="?android:attr/selectableItemBackgroundBorderless">
     <ImageView
+        android:layout_gravity="center"
         android:scaleType="centerInside"
         android:id="@+id/img"
         android:layout_width="30dp"
