--- a/app/src/main/res/layout/activity_self_info.xml
+++ b/app/src/main/res/layout/activity_self_info.xml
@@ -50,6 +50,7 @@
             android:textStyle="bold"
             android:textSize="16sp"/>
         <de.hdodenhof.circleimageview.CircleImageView
+            android:transitionName="img"
             android:id="@+id/headImg"
             android:layout_marginEnd="30dp"
             android:layout_alignParentEnd="true"
