--- a/app/src/main/res/layout/activity_notify_sound.xml
+++ b/app/src/main/res/layout/activity_notify_sound.xml
@@ -40,7 +40,10 @@
         android:background="?android:attr/selectableItemBackground"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="10dp"
+        android:paddingTop="17dp"
+        android:paddingBottom="17dp"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
         android:orientation="horizontal">
         <TextView
             android:layout_centerVertical="true"
@@ -78,8 +81,10 @@
             android:textColor="#5a5a5a"
             android:textStyle="bold"
             android:textSize="16sp"/>
-        <ImageView
-            android:background="@drawable/audio_border"
+        <de.hdodenhof.circleimageview.CircleImageView
+            app:civ_border_width="2dp"
+
+            android:id="@+id/selectAudio"
             android:padding="8dp"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
