--- a/app/src/main/res/values/attr.xml
+++ b/app/src/main/res/values/attr.xml
@@ -33,4 +33,8 @@
         <attr name="civClipCircle" format="boolean" />
     </declare-styleable>
 
+    <declare-styleable name="JAudioImgView">
+        <attr name="jAudioImg" format="reference"/>
+    </declare-styleable>
+
 </resources>
