--- a/app/src/main/res/layout/fragment_home_page.xml
+++ b/app/src/main/res/layout/fragment_home_page.xml
@@ -82,6 +82,8 @@
                             android:textColor="#222222"
                             android:layout_marginStart="10dp"/>
                         <Button
+                            android:layout_marginTop="10dp"
+                            android:layout_marginBottom="10dp"
                             android:layout_width="wrap_content"
                             android:layout_height="25dp"
                             android:text="更多"
@@ -113,6 +115,8 @@
                             android:textColor="#222222"
                             android:layout_marginStart="10dp"/>
                         <Button
+                            android:layout_marginTop="10dp"
+                            android:layout_marginBottom="10dp"
                             android:layout_width="wrap_content"
                             android:layout_height="25dp"
                             android:text="更多"
