--- a/app/src/main/res/layout/order_all_recyclerview.xml
+++ b/app/src/main/res/layout/order_all_recyclerview.xml
@@ -4,6 +4,7 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="200dp"
@@ -14,92 +15,109 @@
         app:cardPreventCornerOverlap="false"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="0.4">
+
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_weight="1.5">
+                    android:layout_weight="1.5"
+                    android:orientation="horizontal">
+
                     <ImageView
                         android:id="@+id/all_shop_img"
                         android:layout_width="25dp"
                         android:layout_height="25dp"
                         android:layout_gravity="center"
                         android:layout_marginLeft="19dp"
-                        android:background="@drawable/cat"/>
+                        android:background="@drawable/cat" />
+
                     <TextView
                         android:id="@+id/all_shop_name"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="好先生炸鸡汉堡>"
+                        android:layout_marginStart="10dp"
                         android:textColor="@color/black"
-                        android:paddingStart="10dp"
                         android:textSize="16sp"
-                        android:layout_gravity="center"/>
+                        android:layout_gravity="center" />
                 </LinearLayout>
-                <LinearLayout
+
+                <RelativeLayout
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_weight="0.5"
-                    android:gravity="center">
+                    android:layout_weight="0.5">
 
                     <TextView
+                        android:layout_alignParentEnd="true"
+                        android:layout_centerVertical="true"
+                        android:layout_marginEnd="19dp"
                         android:id="@+id/all_status"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_marginLeft="39dp"
                         android:text="已完成" />
-                </LinearLayout>
+                </RelativeLayout>
             </LinearLayout>
+
             <LinearLayout
+                android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1">
+
                 <ImageView
                     android:id="@+id/all_fruit_img"
                     android:layout_width="80dp"
                     android:layout_height="80dp"
                     android:layout_gravity="center"
-                    android:layout_marginLeft="19dp"
-                    android:background="@color/pink"/>
-                <TextView
-                    android:id="@+id/all_time"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:text="下单时间：2020-01-09 8:00"
-                    android:layout_marginBottom="30dp"
-                    android:layout_marginLeft="10dp"/>
-                <TextView
-                    android:id="@+id/all_price"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:text="总价： ￥31"
-                    android:layout_marginLeft="-173dp"
-                    android:layout_marginTop="3dp"/>
+                    android:layout_marginStart="19dp"
+                    android:scaleType="centerCrop"
+                    android:background="@color/pink" />
+                <LinearLayout
+                    android:layout_marginStart="10dp"
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                    <TextView
+                        android:id="@+id/all_time"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="下单时间：2020-01-09 8:00" />
+
+                    <TextView
+                        android:id="@+id/all_price"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="总价： ￥31"
+                        android:layout_marginTop="10dp" />
+                </LinearLayout>
+
             </LinearLayout>
-            <LinearLayout
+
+            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="0.6"
-                android:gravity="center|right">
+                android:layout_weight="0.6">
+
                 <Button
                     android:id="@+id/all_btn_again"
+                    android:layout_alignParentEnd="true"
+                    android:layout_centerVertical="true"
                     android:background="@drawable/order_btn_bg"
                     android:textColor="@color/darkGray"
                     android:layout_width="100dp"
                     android:layout_height="wrap_content"
                     android:text="再来一单"
-                    android:layout_marginRight="10dp"/>
-            </LinearLayout>
+                    android:layout_marginRight="10dp" />
+            </RelativeLayout>
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
