--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -46,6 +46,11 @@
                     android:background="@drawable/return_btn_shape"
                     android:scaleType="centerCrop"
                     android:src="@drawable/return_btn" />
+
+                <com.jerry.jtakeaway.custom.JBarrageView
+                    android:id="@+id/barrage"
+                    android:layout_width="match_parent"
+                    android:layout_height="270dp" />
             </RelativeLayout>
             <!--            价格打折-->
             <LinearLayout
