--- a/app/src/main/res/layout/fragment_personal.xml
+++ b/app/src/main/res/layout/fragment_personal.xml
@@ -100,6 +100,7 @@
                             android:textStyle="bold" />
 
                         <TextView
+                            android:id="@+id/all_order"
                             android:background="?android:selectableItemBackgroundBorderless"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
