交易记录完成

--- a/app/src/main/res/layout/activity_transaction.xml
+++ b/app/src/main/res/layout/activity_transaction.xml
@@ -34,6 +34,9 @@
         android:layout_width="match_parent"
         android:layout_height="20dp"
         android:background="#F4F4F4"/>
-
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/tranRecyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
 </LinearLayout>
