--- a/app/src/main/res/layout/email_recyclerview_item.xml
+++ b/app/src/main/res/layout/email_recyclerview_item.xml
@@ -37,7 +37,7 @@
                         android:layout_height="20dp"
                         android:layout_gravity="center"
                         android:gravity="center"
-                        android:textSize="5sp"
+                        android:textSize="10dp"
                         android:textColor="@color/white"
                         android:text="交易"
                         android:background="@drawable/textview_round_boder"/>
@@ -69,23 +69,10 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="1">
-                <TextView
-                    android:id="@+id/email_prompt"
-                    android:layout_gravity="center"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="派送中"
-                    android:textColor="@color/black"
-                    android:textSize="16sp"
-                    android:layout_marginLeft="20dp"/>
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
                 android:layout_weight="3"
                 android:gravity="center">
                 <TextView
+                    android:id="@+id/content"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="15sp"
