--- a/app/src/main/res/drawable/timepicker_shape.xml
+++ b/app/src/main/res/drawable/timepicker_shape.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <corners android:radius="30dp"/>
+    <corners android:topRightRadius="10dp"
+        android:bottomLeftRadius="10dp"/>
     <solid android:color="#fbfbfb"/>
 </shape>
