--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
     android:layout_width="match_parent"
@@ -9,131 +8,140 @@
     tools:context=".ui.generalActivity.LoginActivity">
 
 
+    <LinearLayout
+        android:id="@+id/login_card_wapper"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="70dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="70dp"
+        android:background="@drawable/logincard_shape"
+        android:orientation="vertical"
+        tools:ignore="UselessParent">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:text="疯狂外卖"
+                android:textColor="#222222"
+                android:textSize="30sp"
+                android:textStyle="bold"
+                tools:ignore="HardcodedText" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1">
+
+            <include
+                layout="@layout/username_input"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1">
+
+            <include
+                layout="@layout/password_input"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp" />
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1">
+
+            <com.jerry.jtakeaway.custom.JLoginButton
+                android:id="@+id/login_btn"
+                android:layout_width="200dp"
+                android:layout_height="50dp"
+                android:layout_centerInParent="true" />
+        </RelativeLayout>
+
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1">
+
+            <TextView
+                android:id="@+id/forgetpwd_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:text="--忘记密码--"
+                android:textColor="@drawable/text_selector"
+                android:textStyle="bold" />
+
+        </RelativeLayout>
 
         <LinearLayout
-            android:background="@drawable/logincard_shape"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="70dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginBottom="70dp"
-            android:id="@+id/login_card_wapper"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            tools:ignore="UselessParent">
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:text="疯狂外卖"
-                    android:textColor="#222222"
-                    android:textSize="30sp"
-                    android:textStyle="bold"
-                    tools:ignore="HardcodedText" />
-            </RelativeLayout>
+            <com.jerry.jtakeaway.custom.AniImgButton
+                android:id="@+id/qq_aib"
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                android:layout_weight="1"
+                android:background="@color/float_transparent"
+                android:scaleType="centerInside"
+                android:src="@drawable/qq" />
 
-           <RelativeLayout
-               android:layout_width="match_parent"
-               android:layout_height="0dp"
-               android:layout_weight="1">
-               <include
-                   layout="@layout/username_input"
-                   android:layout_width="match_parent"
-                   android:layout_height="wrap_content"
-                   android:layout_centerInParent="true"
-                   android:layout_marginStart="20dp"
-                   android:layout_marginEnd="20dp" />
-           </RelativeLayout>
+            <com.jerry.jtakeaway.custom.AniImgButton
+                android:id="@+id/weibo_aib"
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                android:layout_weight="1"
+                android:background="@color/float_transparent"
+                android:scaleType="centerInside"
+                android:src="@drawable/webo" />
 
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1">
-                <include
-                    layout="@layout/password_input"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="20dp"
-                    android:layout_centerInParent="true"
-                    android:layout_marginEnd="20dp" />
-
-            </RelativeLayout>
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1">
-                <com.jerry.jtakeaway.custom.JLoginButton
-                    android:layout_centerInParent="true"
-                    android:layout_width="200dp"
-                    android:layout_height="50dp"
-                    android:id="@+id/login_btn"/>
-            </RelativeLayout>
-
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1">
-                <TextView
-                    android:id="@+id/forgetpwd_tv"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:text="--忘记密码--"
-                    android:textStyle="bold"
-                    android:textColor="@drawable/text_selector" />
-
-            </RelativeLayout>
-
-            <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-                <com.jerry.jtakeaway.custom.AniImgButton
-                    android:id="@+id/qq_aib"
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:layout_height="50dp"
-                    android:src="@drawable/qq"
-                    android:scaleType="centerInside"
-                    android:background="@color/float_transparent"/>
-                <com.jerry.jtakeaway.custom.AniImgButton
-                    android:id="@+id/weibo_aib"
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:layout_height="50dp"
-                    android:src="@drawable/webo"
-                    android:scaleType="centerInside"
-                    android:background="@color/float_transparent"/>
-                <com.jerry.jtakeaway.custom.AniImgButton
-                    android:id="@+id/wechat_aib"
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:layout_height="50dp"
-                    android:src="@drawable/wechat"
-                    android:scaleType="centerInside"
-                    android:background="@color/float_transparent"/>
-            </LinearLayout>
-           <RelativeLayout
-               android:layout_width="match_parent"
-               android:layout_height="0dp"
-               android:layout_weight="1">
-               <TextView
-                   android:id="@+id/just_login_tv"
-                   android:layout_centerInParent="true"
-                   android:layout_width="wrap_content"
-                   android:layout_height="wrap_content"
-                   android:text="已有账号可直接登录"
-                   android:textColor="@drawable/text_selector"
-                   android:textStyle="bold" />
-           </RelativeLayout>
+            <com.jerry.jtakeaway.custom.AniImgButton
+                android:id="@+id/wechat_aib"
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                android:layout_weight="1"
+                android:background="@color/float_transparent"
+                android:scaleType="centerInside"
+                android:src="@drawable/wechat" />
         </LinearLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1">
+
+            <TextView
+                android:id="@+id/just_sign_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:text="还没有账号,立即注册"
+                android:textColor="@drawable/text_selector"
+                android:textStyle="bold" />
+        </RelativeLayout>
+    </LinearLayout>
 
 
 </RelativeLayout>
