--- a/app/src/main/res/layout/transaction_item.xml
+++ b/app/src/main/res/layout/transaction_item.xml
@@ -5,8 +5,9 @@
     android:layout_height="wrap_content"
     android:padding="10dp">
     <de.hdodenhof.circleimageview.CircleImageView
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_gravity="center"
         android:src="@drawable/c6662b0de7365559f79d9eb6088d9527"
         android:id="@+id/avatar"/>
     <LinearLayout
