--- a/app/src/main/res/layout/username_input.xml
+++ b/app/src/main/res/layout/username_input.xml
@@ -4,24 +4,26 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:background="@drawable/timepicker_shape">
-    <ImageView
-        android:background="@null"
-        android:id="@+id/username_iv"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp"
+    android:background="@drawable/timepicker_shape"
+    android:alpha="0.6">
+    <TextView
         android:layout_marginStart="10dp"
-        android:scaleType="centerCrop"
-        android:src="@drawable/username" />
+        android:layout_marginTop="15dp"
+        android:layout_marginBottom="15dp"
+        android:layout_gravity="center"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textStyle="bold"
+        android:textSize="15sp"
+        android:textColor="#222222"
+        android:text="账号"/>
     <EditText
+        android:layout_marginStart="10dp"
         android:id="@+id/username_et"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:maxLength="15"
         android:background="@null"
-        android:hint="账号/手机号"
         android:singleLine="true"
         android:textColorHint="#919191"/>
 
