--- a/app/src/main/res/drawable/conpon_btn_selector.xml
+++ b/app/src/main/res/drawable/conpon_btn_selector.xml
@@ -1,5 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <item android:state_enabled="false">
+        <shape>
+            <solid android:color="#5a5a5a"/>
+            <corners android:radius="20dp"/>
+        </shape>
+    </item>
     <item android:state_pressed="false">
         <shape>
             <solid android:color="#F76B6C"/>
@@ -13,10 +20,4 @@
         </shape>
     </item>
 
-    <item android:state_enabled="true">
-        <shape>
-            <solid android:color="#5a5a5a"/>
-            <corners android:radius="20dp"/>
-        </shape>
-    </item>
 </selector>
