--- a/app/src/main/res/layout/activity_all_shop.xml
+++ b/app/src/main/res/layout/activity_all_shop.xml
@@ -3,17 +3,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.user.activity.ConponGetActivity"
-    android:orientation="vertical"
-    android:background="#F7F8FC">
+    xmlns:material="http://schemas.android.com/apk/res-auto"
+    tools:context=".ui.user.activity.SettingActivity"
+    android:orientation="vertical">
     <View
-        android:id="@+id/top"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:background="#A89696"
-        tools:ignore="MissingConstraints" />
+        android:id="@+id/top"/>
     <RelativeLayout
-        android:background="#ffffff"
         android:padding="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -28,7 +25,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="优惠卷领取"
+            android:text="所有店铺"
             android:layout_centerInParent="true"
             android:textColor="#222222"
             android:textStyle="bold"
@@ -37,15 +34,13 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
-        android:background="#B1B1B1"/>
-
+        android:background="#B4B4B4"/>
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/refresh"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/conpon_recyclview"
-            android:layout_marginTop="20dp"
+            android:id="@+id/shopRecyclerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
