--- a/app/src/main/res/layout/activity_my_conpon.xml
+++ b/app/src/main/res/layout/activity_my_conpon.xml
@@ -3,17 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.user.activity.ConponGetActivity"
-    android:orientation="vertical"
-    android:background="#F7F8FC">
+    tools:context=".ui.user.activity.SettingActivity"
+    android:orientation="vertical">
     <View
-        android:id="@+id/top"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:background="#A89696"
-        tools:ignore="MissingConstraints" />
+        android:id="@+id/top"/>
     <RelativeLayout
-        android:background="#ffffff"
         android:padding="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -28,26 +24,30 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="优惠卷领取"
+            android:text="我的优惠卷"
             android:layout_centerInParent="true"
             android:textColor="#222222"
             android:textStyle="bold"
             android:textSize="18sp"/>
+        <TextView
+            android:id="@+id/conponGetBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="领取优惠卷"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:textColor="#ff7875"
+            android:textStyle="bold"
+            android:textSize="18sp"/>
+
     </RelativeLayout>
     <View
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
-        android:background="#B1B1B1"/>
-
-    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-        android:id="@+id/refresh"
+        android:background="#B4B4B4"/>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/conponRecyvlerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/conpon_recyclview"
-            android:layout_marginTop="20dp"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
-    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+        android:layout_height="match_parent"/>
 
 </LinearLayout>
