--- a/app/src/main/res/layout/activity_table.xml
+++ b/app/src/main/res/layout/activity_table.xml
@@ -3,69 +3,120 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.user.activity.SettingActivity"
-    android:orientation="vertical">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    tools:context=".ui.user.activity.SettingActivity">
+
     <View
+        android:id="@+id/top"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:id="@+id/top"/>
+        android:layout_height="0dp" />
+
     <RelativeLayout
-        android:padding="10dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:padding="10dp">
+
         <com.jerry.jtakeaway.custom.AniImgButton
             android:id="@+id/return_aib"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_marginStart="10dp"
-            android:src="@drawable/return_btn"
+            android:background="@color/float_transparent"
             android:scaleType="centerCrop"
-            android:background="@color/float_transparent"/>
+            android:src="@drawable/return_btn" />
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="支出统计"
             android:layout_centerInParent="true"
+            android:text="支出统计"
             android:textColor="#222222"
-            android:textStyle="bold"
-            android:textSize="18sp"/>
+            android:textSize="18sp"
+            android:textStyle="bold" />
     </RelativeLayout>
-    <LinearLayout
-        android:orientation="vertical"
+
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <LinearLayout
-            android:orientation="horizontal"
-            android:gravity="center"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <View
-                android:layout_gravity="center"
-                android:background="#B4B4B4"
-                android:layout_weight="1"
-                android:layout_width="0dp"
-                android:layout_height="0.5dp"/>
-            <TextView
-                android:id="@+id/selectDate"
-                android:padding="5dp"
-                android:background="@drawable/calender_g"
-                android:layout_marginStart="10dp"
-                android:layout_marginEnd="10dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="2020年6月>"
-                android:textStyle="bold" />
-            <View
-                android:layout_gravity="center"
-                android:background="#B4B4B4"
-                android:layout_weight="1"
-                android:layout_width="0dp"
-                android:layout_height="0.5dp"/>
-        </LinearLayout>
-        <lecho.lib.hellocharts.view.LineChartView
-            android:id="@+id/table"
-            android:layout_width="match_parent"
-            android:layout_height="300dp"/>
 
-    </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <View
+                    android:layout_width="0dp"
+                    android:layout_height="0.5dp"
+                    android:layout_gravity="center"
+                    android:layout_weight="1"
+                    android:background="#B4B4B4" />
+
+                <TextView
+                    android:id="@+id/selectDate"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginEnd="10dp"
+                    android:background="@drawable/calender_g"
+                    android:padding="5dp"
+                    android:text="2020年6月>"
+                    android:textStyle="bold" />
+
+                <View
+                    android:layout_width="0dp"
+                    android:layout_height="0.5dp"
+                    android:layout_gravity="center"
+                    android:layout_weight="1"
+                    android:background="#B4B4B4" />
+            </LinearLayout>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:padding="5dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="10dp"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginEnd="10dp"
+                    android:background="@drawable/line_chart" />
+
+                <androidx.cardview.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginStart="17dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginEnd="17dp">
+
+                    <LinearLayout
+                        android:orientation="vertical"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:padding="10dp">
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="每日支出"
+                            android:textStyle="bold"
+                            android:textColor="#222222"
+                            android:textSize="16sp"/>
+                        <lecho.lib.hellocharts.view.LineChartView
+                            android:id="@+id/table"
+                            android:layout_width="match_parent"
+                            android:layout_height="200dp" />
+                    </LinearLayout>
+                </androidx.cardview.widget.CardView>
+
+            </RelativeLayout>
+
+        </LinearLayout>
+    </ScrollView>
 </LinearLayout>
