--- a/app/src/main/res/layout/fragment_home_page.xml
+++ b/app/src/main/res/layout/fragment_home_page.xml
@@ -82,6 +82,7 @@
                             android:textColor="#222222"
                             android:layout_marginStart="10dp"/>
                         <Button
+                            android:id="@+id/more"
                             android:layout_marginTop="10dp"
                             android:layout_marginBottom="10dp"
                             android:layout_width="wrap_content"
@@ -115,6 +116,7 @@
                             android:textColor="#222222"
                             android:layout_marginStart="10dp"/>
                         <Button
+                            android:id="@+id/more1"
                             android:layout_marginTop="10dp"
                             android:layout_marginBottom="10dp"
                             android:layout_width="wrap_content"
